# mpm-optimization

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: FindOpenMPCustom.cmake
src/: Interp.hpp  MPM.cpp  MPM.hpp  Particle.hpp  Solver.cpp  Solver.hpp  sphere.cpp
